=== 0.4.2.1 (2007-12-09)

* Refactored and fixed Dataset#reverse_order to work with field quoting (thanks Christian).

* Fixed problem with field quoting in insert statements.

* Changed sequelizer code to silently fail on any error when requiring parsetree and ruby2ruby.

* Added Database#create_view, #create_or_replace_view and #drop_view methods. Also implemented Dataset#create_view and #create_or_replace_view convenience methods.

* Keep DRY by re-using Model#[]= from method_missing.

* Added Model.fetch alias for DB.fetch.set_model(Model)

=== 0.4.2 (2007-12-07)

* Implemented Model#save_changes.

* Extended Model#save to accept specific columns to update.

* Implemented experimental JDBC adapter.

* Added adapter skeleton as starting point for new adapters.

* Cleaned-up adapters and moved automatic requiring of 'sequel' to adapter stubs.

=== 0.4.1.3 (2007-12-05)

* Better plugin conventions.

* Added experimental OpenBase adapter.

* Fixed Sequel.<xxx> methods to accept options hash as well as database name. Fixed Sequel.connect to accept options hash as well as URI (Wayne).

=== 0.4.1.2 (2007-12-04)

* Added release rake task (using RubyForge).

* Changed Model.is to accept variable arity.

* Implemented plugin loading for model classes.

* Fixed odbc-mssql and odbc adapters (thanks Dusty.)

* Implemented odbc-mssql adapter (thanks Dusty.)

=== 0.4.1.1 (2007-11-27)

* Fixed #first and #last functionality in Informix::Dataset (thanks Gerardo Santana).

=== 0.4.1 (2007-11-25)

* Put adapter files in lib/sequel/adapters. Requiring sequel/<adapter> is now deprecated. Users can now just require 'sequel' and adapters are automagically loaded (#93).

=== 0.4.0 (2007-11-24)

* Reorganized lib directory structure.

* Added support for dbi-xxx URI schemes (#86).

* Fixed problem in Database#uri where setting the password would raise an error (#87).

* Improved Dataset#insert_sql to correctly handle string keys (#92).
