@@ -1,3 +1,7 @@
+=== SVN
+
+* Added Model.create_with_params method that filters the given parameters accordring to the model's columns (thanks Aman Gupta). 
+
 === 0.4.2.1 (2007-12-09)
 
 * Refactored and fixed Dataset#reverse_order to work with field quoting (thanks Christian).
